fix: add z-index for header

--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -12,6 +12,7 @@
   font-size: 18px;
   padding: 15px;
   border-bottom: 2px solid;
+  z-index: 1000;
   transition:
     background-color 1s,
     border-bottom 0.3s,
